# seoclientmanager

./: .cursorignore  .cursorrules  .gitignore  .replit  .repomixignore  .repopackignore  README.md  activity_monitoring_spec.md  add_dependencies.py  add_dependencies.sh  agentchat.txt  codebase_context.txt  crewai.txt  daphneserver.sh  db.sqlite3  getapp.sh  keyword_data.csv  keyword_data.json  keywordresearch.md  landing_page_data.csv  litellmtest.py  llmmapreduce.txt  package-lock.json  package.json  print_dirs.sh  pyproject.toml  replit.nix  repomix-crewai.txt  repomix-output.txt  repomix.config.json.seoclientmanager  repopack-output.txt  requirements copy.txt  requirements.in  requirements.txt  requirements.yaml  restart.sh  runserver  settings.py  spec_create_company_profile.txt  start_seomanager.sh  (+6 more)
0downloads/summarizer/: chunk-1-1  compress_content-1  compressed-chunk-1-1  compressed_content.txt  raw_content.txt  summary.txt
apps/agents/: README.md  admin.py  apps.py  celery.py  consumers.py  custom_agent.py  forms.py  (+15 more)
core/: __init__.py  asgi.py  routing.py  settings.py  urls.py
db/: chroma.sqlite3
experiments/: browser_tool.py  focused_crawler.ipynb  google_api.ipynb  google_trends.ipynb  litellmtest.py  litellmtestmodels.py  mockup1.html  mockup2.html  no_agent_crew.ipynb  repopack-output.txt  test.py  test_crew.ipynb
experiments/hello_world_project/: README.md  pyproject.toml
experiments/hello_world_project/src/hello_world_project/: crew.py  main.py
external_docs/: crawl4ai-api.md  crawl4ai.md  crewai_concepts_summary.txt  crewai_core_concepts.txt  google__maps_text_search_reference.md  google_analytics_llm_guide.txt  google_maps_text_search.txt
external_research/: activity_monitoring_spec.md  crewai_llm.txt  places.py  requirements.md
home/: models.py  urls.py  views.py
outputs/: crawled_data.md
paths/: seoclientmanager.md
pids/: celery.pid  django.pid
project/: urls.py
seoclientmanager/: settings.py  urls.py
(+339 files in other folders)
