[tool.poetry]
name = "hello_world_project"
version = "0.1.0"
description = "hello_world_project using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
hello_world_project = "hello_world_project.main:run"
run_crew = "hello_world_project.main:run"
train = "hello_world_project.main:train"
replay = "hello_world_project.main:replay"
test = "hello_world_project.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
